<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/coffeeBtn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/whitebox_line"
                android:text="@string/korean_coffee_category"
                android:textColor="@color/ediyacolor" />

            <Button
                android:id="@+id/adeBtn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/blue_box"
                android:text="@string/korean_ade_category"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/shakeBtn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/blue_box"
                android:text="@string/korean_shake_category"
                android:textColor="@color/white" />


            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/blue_box"
                android:text="@string/korean_flatcino_category"
                android:textColor="@color/white" />


            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/blue_box"
                android:text="@string/korean_bread_category"
                android:textColor="@color/white" />

        </LinearLayout>

    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/fragmentArea2"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="410dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/menuLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">
            </LinearLayout>
        </ScrollView>
    </FrameLayout>


    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/menu_goback_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="120dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/ediyacolor"
            android:background="@drawable/goback_btn"
            android:text="@string/korean_goback" />

        <Button
            android:id="@+id/basket_btn"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ediya_btn"
            android:text="@string/korean_basket"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button" />

        <Button
            android:id="@+id/basket_pay_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ediya_btn"
            android:text="@string/korean_pay"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>