<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/ediya_logo_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:text="@string/korean_order_number"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginLeft="40dp"
            android:text="66"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="70sp" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:text="@string/korean_please_wait_for_the_receipt_to_bo_printed"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="70dp"
            android:src="@drawable/reciepticon" />

        <Button
            android:id="@+id/done_btn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:textSize="25sp"
            android:text = "@string/korean_done"
            android:layout_marginLeft="85dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/korean_thank_you"
            android:textAlignment="center"
            android:textColor="@color/ediyacolor"
            android:textSize="30sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>